--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="card-container flex gap-[32px]">
             <!-- card -->
             <div class="border-[1px] border-gray-300 card w-[411px] rounded-3xl p-[24px]">
-                <img class="mb-[20px] h-[300px] w-full bg-[#0e0e0e]/5 object-cover rounded-2xl " src="/content/woman-model-demonstrating-winter-cloths 1.png" alt="">
+                <img class="mb-[20px] h-[300px] w-full bg-[#0e0e0e]/5 object-cover rounded-2xl " src="../content/woman-model-demonstrating-winter-cloths 1.png" alt="">
                 <h3 class="mb-[8px] text-[18px] font-bold">Balenciaga Floral-Print Silk Shirt</h3>
                 <p class="mb-[20px] text-[16px] font-normal">$1644.00</p>
                 <button class="mb-[12px] px-[32px] py-[14px] bg-[#d8fb78] rounded-3xl text-[18px] font-bold w-full">Buy Now</button>
