--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tailwind CSS Assignment-01</title>
 </head>
 <body class="">
     <section class="navigation max-w-7xl flex justify-between items-center my-[55px] mx-auto">
