some bugs fixed

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
     <!-- footer -->
     <section class="flex flex-col justify-center items-center bg-slate-100">
-        <h3 class="font-bold mx-auto text-center text-[28px] font-bold mb-[32px] mt-[100px]">Nerdy</h3>
+        <h3 class="font-bold mx-auto text-center text-[28px] mb-[32px] mt-[100px]">Nerdy</h3>
         <div class="links mb-[32px]">
             <ul class="flex gap-[48px]">
                 <li>Home</li>
