--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="card-container flex gap-[32px]">
             <!-- card -->
             <div class="border-[1px] border-gray-300 card w-[411px] rounded-3xl p-[24px]">
-                <img class="mb-[20px] h-[300px] w-full bg-[#0e0e0e]/5 object-cover rounded-2xl " src="../tailwind-css-assignment-01/content/woman-model-demonstrating-winter-cloths 1.png" alt="">
+                <img class="mb-[20px] h-[300px] w-full bg-[#0e0e0e]/5 object-cover rounded-2xl " src="https://s3-alpha-sig.figma.com/img/9e72/1f38/ef5046a254b3422561f7ebce6cc1466e?Expires=1733702400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=nyZQSZV6zhO73jU0NMtCTksBrgx-RGquOREPgjNch2KnFiDWOHQgOMVpiBJ98DJqJv-gkgaxVdoyogewdTCFT27fg9NtyuoLj~uy793PkfrV0M1HtRxrjK3vgSKajq9CLd7hrgsNTbcRKBs512p1kquotb-gcRttXeLvZNk4Zrj52UgX2iGSSWCt0yh3yOE4TOMH9gpaWbuWc6IZzc8g1ctMkiiF3o2cLi~x0BCcltEuEjH5buQjIfs1t~Qoencuu0D8SSB596t4WbP43fOW8-RpfBqp5qHRg7x~LMZ8L149ZNg2Wy2a0uHVvcXL2Zb2nChZY9JriYU1YPnIZ1RPog__" alt="">
                 <h3 class="mb-[8px] text-[18px] font-bold">Balenciaga Floral-Print Silk Shirt</h3>
                 <p class="mb-[20px] text-[16px] font-normal">$1644.00</p>
                 <button class="mb-[12px] px-[32px] py-[14px] bg-[#d8fb78] rounded-3xl text-[18px] font-bold w-full">Buy Now</button>
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <div class="border-[1px] border-gray-300 card w-[411px] rounded-3xl p-[24px]">
-                <img class="mb-[20px] h-[300px] w-full bg-[#0e0e0e]/5 object-cover rounded-2xl " src="../tailwind-css-assignment-01/content/woman-model-demonstrating-winter-cloths 1.png" alt="">
+                <img class="mb-[20px] h-[300px] w-full bg-[#0e0e0e]/5 object-cover rounded-2xl " src="https://s3-alpha-sig.figma.com/img/9e72/1f38/ef5046a254b3422561f7ebce6cc1466e?Expires=1733702400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=nyZQSZV6zhO73jU0NMtCTksBrgx-RGquOREPgjNch2KnFiDWOHQgOMVpiBJ98DJqJv-gkgaxVdoyogewdTCFT27fg9NtyuoLj~uy793PkfrV0M1HtRxrjK3vgSKajq9CLd7hrgsNTbcRKBs512p1kquotb-gcRttXeLvZNk4Zrj52UgX2iGSSWCt0yh3yOE4TOMH9gpaWbuWc6IZzc8g1ctMkiiF3o2cLi~x0BCcltEuEjH5buQjIfs1t~Qoencuu0D8SSB596t4WbP43fOW8-RpfBqp5qHRg7x~LMZ8L149ZNg2Wy2a0uHVvcXL2Zb2nChZY9JriYU1YPnIZ1RPog__" alt="">
                 <h3 class="mb-[8px] text-[18px] font-bold">Balenciaga Floral-Print Silk Shirt</h3>
                 <p class="mb-[20px] text-[16px] font-normal">$1644.00</p>
                 <button class="mb-[12px] px-[32px] py-[14px] bg-[#d8fb78] rounded-3xl text-[18px] font-bold w-full">Buy Now</button>
@@ -81,7 +81,7 @@
                 </div>
             </div>
             <div class="border-[1px] border-gray-300 card w-[411px] rounded-3xl p-[24px]">
-                <img class="mb-[20px] h-[300px] w-full bg-[#0e0e0e]/5 object-cover rounded-2xl " src="../tailwind-css-assignment-01/content/woman-model-demonstrating-winter-cloths 1.png" alt="">
+                <img class="mb-[20px] h-[300px] w-full bg-[#0e0e0e]/5 object-cover rounded-2xl " src="https://s3-alpha-sig.figma.com/img/9e72/1f38/ef5046a254b3422561f7ebce6cc1466e?Expires=1733702400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=nyZQSZV6zhO73jU0NMtCTksBrgx-RGquOREPgjNch2KnFiDWOHQgOMVpiBJ98DJqJv-gkgaxVdoyogewdTCFT27fg9NtyuoLj~uy793PkfrV0M1HtRxrjK3vgSKajq9CLd7hrgsNTbcRKBs512p1kquotb-gcRttXeLvZNk4Zrj52UgX2iGSSWCt0yh3yOE4TOMH9gpaWbuWc6IZzc8g1ctMkiiF3o2cLi~x0BCcltEuEjH5buQjIfs1t~Qoencuu0D8SSB596t4WbP43fOW8-RpfBqp5qHRg7x~LMZ8L149ZNg2Wy2a0uHVvcXL2Zb2nChZY9JriYU1YPnIZ1RPog__" alt="">
                 <h3 class="mb-[8px] text-[18px] font-bold">Balenciaga Floral-Print Silk Shirt</h3>
                 <p class="mb-[20px] text-[16px] font-normal">$1644.00</p>
                 <button class="mb-[12px] px-[32px] py-[14px] bg-[#d8fb78] rounded-3xl text-[18px] font-bold w-full">Buy Now</button>
